@@ -1,3 +1,7 @@
+2011-02-01  Werner Koch  <wk@g10code.com>
+
+	* mpi-cmp.c (gcry_mpi_cmp): Allow comparing of opaque MPIs.
+
 2010-04-12  Brad Hards  <bradh@frogmouth.net>  (wk)
 
 	Spelling fixes.
