@@ -22,7 +22,10 @@ Noteworthy changes in version 1.5.x (unreleased)
 
  * gcry_sexp_build does now support opaque MPIs with "%m".
 
- * New function gcry_pk_get_curve to map ECC parameters to a curve name.
+ * New function gcry_pk_get_curve to map ECC parameters to a curve
+   name.
+
+ * gcry_mpi_cmp applied to opaque values has a defined semantic now.
 
  * Interface changes relative to the 1.4.2 release:
  ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
